--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Sample App</title>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
-    
+    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+
   </head>
   <body>
     <div id='root'>
