--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <title>OCCInterface</title>
 
+    <link rel="stylesheet" type="text/css" href="dist/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type='text/javascript'></script>
+    <script src="semantic/dist/semantic.js" type='text/javascript'></script>
 
   </head>
   <body>
     <div id='root'>
     </div>
-    <script src="/static/bundle.js"></script>
   </body>
+  <script src="/static/bundle.js"></script>
+
 </html>
