--- a/index.html
+++ b/index.html
@@ -16,6 +16,5 @@
     <div id='root'>
     </div>
   </body>
-  <script src="/static/bundle.js"></script>
-
+  <script src="/dist/bundle.js"></script>
 </html>
