--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <div id='root'>
     </div>
   </body>
-  <script src="/dist/bundle.js"></script>
+  <script src="/static/bundle.js"></script>
 </html>
